--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-API_KEY=your_api_key_here
-SECRET_KEY=your_secret_key_here
+API_KEY=`http://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`
+NODE_ENV = production
+PORT=8080
+HOST= 127.0.0.1
