--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-API_KEY=`http://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`
+API_KEY= 28fb52726766f621624a780ac08d9bfe
 NODE_ENV = production
 PORT=8080
 HOST= 127.0.0.1
+WEATHER_API_URL = `http://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`
