--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 API_KEY= 28fb52726766f621624a780ac08d9bfe
 NODE_ENV = production
 PORT=8080
-HOST= 127.0.0.1
+HOST= 0.0.0.0
 WEATHER_API_URL = `http://api.openweathermap.org/data/2.5/forecast?lat=${lat}&lon=${lon}&appid=${API_KEY}`
+GEOCODING_API_URL = `http://api.openweathermap.org/geo/1.0/direct?q=${cityName}&limit=1&appid=${API_KEY}`
+REVERSE_GEOCODING_URL = `http://api.openweathermap.org/geo/1.0/reverse?lat=${latitude}&lon=${longitude}&limit=1&appid=${API_KEY}`
